# cav_lab_testing

./: README.md
encoder/emcoder_working1/: emcoder_working1.ino  encoder_working1.ino
imu_manual_arduino/joy_commands/install/manual_control/share/manual_control/: local_setup.sh  package.sh  package.xml
imu_manual_arduino/joy_commands/log/: latest_build
imu_manual_arduino/joy_commands/src/manual_control/: CMakeLists.txt
imu_manual_arduino/rpi_part/: CMakeLists.txt
imu_manual_arduino/rpi_part/src/: imu_control.cpp  yaw_control.cpp
imu_manual_arduino/with_yaw_atmega_part/: with_yaw_atmega_part.ino
imu_manual_arduino/without_yaw_atmega_part/: without_yaw_atmega_part.ino
imu_manual_integrated/atmega_part/atmega_imu_manual_integrated/: Atmega_imu_integrate_arduino.ino  atmega_imu_manual_integrated.ino  atmega_imu_manual_integrated_PCB.ino
imu_manual_integrated/rpi_part/: CMakeLists.txt  fused_control.cpp
imu_pcb/atmega_part/: acc_yaw_yaw_rate.ino  atmega_part.ino
imu_pcb/rpi_part/: CMakeLists.txt
imu_pcb/rpi_part/src/: imu_debug.cpp
imu_pcb/rpi_part_more_data/: CMakeLists.txt
imu_pcb/rpi_part_more_data/src/: imu_pcb.cpp
manual_control/both_hardware/: both_hardware.ino
manual_control/joy_commands/install/: local_setup.sh  setup.sh
manual_control/joy_commands/src/manual_control/: package.xml
manual_control/joy_commands/src/manual_control/src/: udp_joystick_sender.cpp
manual_control/rpi_part/: CMakeLists.txt
manual_control/rpi_part/src/: spi_control.cpp
manual_control/software_pwm_pcb/: software_pwm_PCB.ino  software_pwm_arduino.ino
(+10 files in other folders)
